--- a/web/src/main/webapp/static/ng/views/deployment-detail.html
+++ b/web/src/main/webapp/static/ng/views/deployment-detail.html
@@ -81,7 +81,7 @@
                 <div class="row"><p></p></div>
                 <div class="row">
                     <div class="col-md-12">
-                        <div class="pull-right">
+                        <div class="btn-toolbar pull-right">
                             <button ng-if="deployment.editable" ng-click="updateDeployment($element)" class="btn btn-default" type="submit" role="button">Update</button>
                             <button ng-if="deployment.editable" ng-click="releaseDeployment(process, deployment)" class="btn btn-danger" type="button" role="button"><i class="icon-rocket"></i> Release</button>
                         </div>
