Improvements to multistep form including arrow key handling

--- a/web/src/main/resources/META-INF/piecework/templates/Form.template.html
+++ b/web/src/main/resources/META-INF/piecework/templates/Form.template.html
@@ -17,7 +17,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0-rc.3/angular-sanitize.min.js"></script>
     <script src="../static/js/vendor/ui-bootstrap-0.6.0.min.js"></script>
     <script src="../static/js/vendor/ui-bootstrap-tpls-0.6.0.js"></script>
-    <script src="../static/js/vendor/ui-mask.js"></script>
+    <script src="../static/js/vendor/jquery.inputmask.js"></script>
     <script src="../static/js/vendor/moment.min.js"></script>
     <script src="../static/js/vendor/jquery.iframe-transport.js"></script>
     <script src="../static/js/vendor/jquery.fileupload.js"></script>
@@ -26,7 +26,7 @@
     <script src="../static/js/vendor/jquery.fileupload-angular.js"></script>
     <script src="../static/ng/js/form.js"></script>
 </head>
-<body role="application">
+<body role="application" keypress-events>
 <div data-ng-view>
 
 </div>
