--- a/web/src/main/webapp/static/ng/views/form.html
+++ b/web/src/main/webapp/static/ng/views/form.html
@@ -1,5 +1,5 @@
 <script type="text/ng-template" id="step.html">
-    <div ng-class="step.leaf ? 'panel panel-default step' : 'step'">
+    <div ng-show="isActiveStep(form, step)" data-ng-class="step.leaf ? 'panel panel-default step' : 'step'">
         <div ng-class="step.leaf ? 'panel-heading' : ''"><h4>{{step.title}}</h4></div>
         <div ng-class="step.leaf ? 'panel-body' : ''">
             <ul data-ng-model="step.fields">
@@ -8,7 +8,7 @@
             <div data-ng-repeat="step in step.children" data-ng-include="'step.html'"></div>
         </div>
     </div>
-    <div class="screen-footer">
+    <div data-ng-show="isCurrentStep(form, step)" class="screen-footer">
         <div data-ng-hide="step.parent.buttons" class="btn-toolbar pull-right" role="toolbar">
             <button data-ng-repeat="button in step.buttons" data-ng-click="clickButton(button, step, form)" class="btn btn-default" name="{{button.name}}" type="{{button.type}}" value="{{button.value}}">{{button.label}}</button>
         </div>
@@ -82,7 +82,7 @@
 </script>
 <script type="text/ng-template" id="field.html">
     <label data-ng-if="field.label">{{field.label}}</label>
-    <div data-ng-switch on="field.type" class="form-group">
+    <div data-ng-class="field.cssClass" data-ng-repeat="n in range(1, field.maxInputs)" data-ng-switch on="field.type" class="form-group">
         <div data-ng-switch-when="html" data-ng-bind-html="field.defaultValue">{{field.defaultValue}}</div>
         <div data-ng-switch-when="checkbox">
             <div class="checkbox" data-ng-repeat="option in field.options">
@@ -116,9 +116,11 @@
             <input data-ng-disabled="!field.editable" data-ng-show="!field.readonly" value="{{field.value.userId ? field.value.userId : field.value}}" name="{{field.name}}" type="hidden"/>
         </div>
         <textarea data-ng-change="onFieldChange(field)" data-ng-switch-when="textarea" data-ng-disabled="!field.editable" data-ng-model="field.value" data-ng-maxlength="{{field.maxValueLength}}" data-ng-minlength="{{field.minValueLength}}" data-ng-pattern="/{{field.pattern}}/" data-ng-readonly="{{field.readonly}}" data-ng-required="field.required" class="form-control" name="{{field.name}}" placeholder="{{field.placeholder}}"></textarea>
-        <input data-ng-switch-default data-ng-change="onFieldChange(field)" data-ng-disabled="!field.editable" data-ng-model="field.value" data-ng-minlength="{{field.minValueLength}}" data-ng-pattern="/{{field.pattern}}/" data-ng-readonly="field.readonly" data-ng-required="{{field.required}}" ui-mask="{{field.mask}}" class="form-control" type="{{field.type}}" name="{{field.name}}" placeholder="{{field.placeholder}}" size="{{field.displayValueLength}}"/>
+        <div data-ng-switch-default>
+            <input data-ng-change="onFieldChange(field)" data-ng-disabled="!field.editable" data-ng-model="field.value" data-ng-minlength="{{field.minValueLength}}" data-ng-pattern="/{{field.pattern}}/" data-ng-readonly="field.readonly" data-ng-required="{{field.required}}" data-inputmask="{{field.mask}}" class="form-control" type="{{field.type}}" name="{{field.name}}" placeholder="{{field.placeholder}}" size="{{field.displayValueLength}}"/>
+        </div>
     </div>
-    <span data-ng-repeat="message in field.messages" class="text-danger">{{message.text}}</span>
+    <span data-ng-repeat="message in field.messages" class="help-block text-danger">{{message.text}}</span>
 </script>
 <script type="text/ng-template" id="multipage.html">
     <div data-ng-show="notifications" class="alert alert-danger">
@@ -139,14 +141,14 @@
             <div class="row">
                 <div class="crumbs col-md-3">
                     <ul class="breadcrumb-stacked">
-                        <li ng-repeat="step in form.steps" ng-class="form.activeStep == step.ordinal ? 'active' : ''">
-                            <a ng-show="step.ordinal <= form.container.activeChildIndex" ng-click="form.activeStep = step.ordinal" href="" class="list-group-item-text">{{step.breadcrumb}}</a>
+                        <li ng-repeat="step in form.steps" ng-class="isActiveStep(form, step) ? 'active' : ''">
+                            <a ng-show="step.ordinal <= form.container.activeChildIndex" ng-click="form.activeStepOrdinal = step.ordinal" href="" class="list-group-item-text">{{step.breadcrumb}}</a>
                             <span ng-show="step.ordinal > form.container.activeChildIndex">{{step.breadcrumb}}</span>
                         </li>
                     </ul>
                 </div>
                 <div ng-class="isViewingAttachments ? 'col-md-5' : 'col-md-9'" class="screen" id="container-{{container.containerId}}">
-                    <div ng-repeat="step in form.steps" ng-show="form.activeStep == step.ordinal" class="screen-content">
+                    <div ng-repeat="step in form.steps" ng-show="isActiveStep(form, step)" class="screen-content">
                         <h2>{{form.container.title}}</h2>
                         <h4>{{step.title}}</h4>
                         <ul data-ng-model="step.fields">
@@ -218,12 +220,12 @@
                     <h2>{{form.container.title}}</h2>
                     <div class="crumbs">
                         <ul class="breadcrumb">
-                            <li ng-repeat="step in form.steps" ng-class="form.activeStep == step.ordinal ? 'active' : ''">
-                                <a ng-click="nextStep(step.ordinal)" href="" class="list-group-item-text">{{step.breadcrumb}}</a>
+                            <li ng-repeat="step in form.steps" ng-class="isActiveStep(form, step) ? 'active' : ''">
+                                <a ng-click="changeStep(step.ordinal)" href="" class="list-group-item-text">{{step.breadcrumb}}</a>
                             </li>
                         </ul>
                     </div>
-                    <div ng-repeat="step in form.steps" ng-show="form.activeStep == step.ordinal" data-ng-include="'step.html'"></div>
+                    <div ng-repeat="step in form.steps" data-ng-include="'step.html'"></div>
                 </div>
                 <div ng-show="isViewingAttachments" class="pw-attachments col-md-4">
                     <div class="panel panel-default">
