--- a/web/src/main/webapp/static/css/layout.css
+++ b/web/src/main/webapp/static/css/layout.css
@@ -116,6 +116,18 @@ ul.breadcrumb-stacked li.active a {
     background-color: transparent;
 }
 
+ul.breadcrumb-stacked li a.invalid {
+    color: red;
+}
+
+ul.breadcrumb-stacked li a.invalid .invalid-only {
+    display: inline-block;
+}
+
+ul.breadcrumb-stacked li .invalid-only {
+    display: none;
+}
+
 ul.breadcrumb-stacked > li:hover,
 ul.breadcrumb-stacked > li:focus {
     text-decoration: none;
@@ -271,7 +283,11 @@ select.form-control {
 
 .main-navbar {
     background-color: whitesmoke;
+    border-top: 0px solid transparent;
+    border-left: 0px solid transparent;
+    border-right: 0px solid transparent;
     border-bottom: 1px solid #CCCCCC;
+    border-radius: 0px;
     padding-left: 0px;
     padding-right: 0px;
 }
@@ -496,7 +512,6 @@ select.form-control {
     font-weight: bold;
     color: #563d7c;
     background-color: transparent;
-
 }
 
 .pw-sidebar .nav .nav > li.active,
