Fixing restricted data handling logic

--- a/web/src/main/resources/META-INF/piecework/templates/Explanation.template.html
+++ b/web/src/main/resources/META-INF/piecework/templates/Explanation.template.html
@@ -8,7 +8,7 @@
     <link href="../static/css/vendor/bootstrap.min.css" rel="stylesheet"/>
     <link href="../static/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet"/>
     <link href="../static/css/layout.css" rel="stylesheet"/>
-    <base href="../ui/form"/>
+    <base href=""/>
     <script src="../static/js/vendor/jquery-1.10.2.min.js"></script>
     <script src="../static/js/vendor/jquery-ui-1.10.3.custom.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.min.js"></script>
@@ -22,7 +22,7 @@
     <script src="../static/js/vendor/jquery.fileupload-process.js"></script>
     <script src="../static/js/vendor/jquery.fileupload-validate.js"></script>
     <script src="../static/js/vendor/jquery.fileupload-angular.js"></script>
-    <script src="../static/ng/js/form.js"></script>
+    <script src="../static/ng/js/explanation.js"></script>
 </head>
 </head>
 <body role="application">
@@ -33,7 +33,7 @@
         </div>
         <div class="container">
             <div class="row">
-                <h1><i class="icon-tasks icon-1x"></i> Processes</h1>
+                <h1><i class="icon-tasks icon-1x"></i> Error</h1>
             </div>
         </div>
     </div>
